--- a/requirements.txt
+++ b/requirements.txt
@@ -1,11 +1,7 @@
-numpy>=1.18.2
-scipy>=1.4.1
+numpy==1.18.0
+scipy==1.4.1
 wget>=3.2
-seaborn>=0.10.0
-tensorflow==2.2.*
-opencv-python==4.1.2.30
-tqdm==4.43.0
+tensorflow==2.2
 pandas
-awscli
-urllib3
 Keras
+matplotlib
